objects/Craigslist_Source__c.object
<CustomObject>
    <description>Captures information about the original craigslist posting associated with a seller.</description>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Migration_Source_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Base object from which this object was migrated.</description>
        <label>Migration Source ID</label>
        <referenceTo>Migration_Source__c</referenceTo>
        <relationshipLabel>Craigslist Sources</relationshipLabel>
        <relationshipName>Craigslist_Sources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Migration_Tree_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Migration Tree ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Post_Date__c</fullName>
        <label>Post Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Price_Projected_In_Pocket__c</fullName>
        <formula>Price__c -  Seller_Opportunity_ID__r.Quoted_Projected_in_Pocket__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price - Projected In Pocket</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Seller_Opportunity_ID__c</fullName>
        <label>Seller Opportunity ID</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value is not a Seller Opportunity</errorMessage>
            <filterItems>
                <field>Opportunity.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Seller</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Craigslist Sources</relationshipLabel>
        <relationshipName>Craigslist_Sources</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TestSFDC_Percent__c</fullName>
        <formula>Seller_Opportunity_ID__r.Quoted_Projected_in_Pocket__c  /  Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent PIP/Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>Craigslist Source</label>
    <nameField>
        <label>Craigslist Source Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Craigslist Sources</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>